tests/global/t5958.nim
discard """
  line: 9
  errormsg: "undeclared identifier: 'a'"
"""

static:
  var a = 1

echo a
